add: print controlnet output