@@ -34,9 +34,13 @@ public class Controller {
         File file = new File("/home/origin_img/" + img.getOriginalFilename());
 
         img.transferTo(file);
-        Process controlnet = Runtime.getRuntime().exec("sudo python3.10 ~/ControlNet-with-Anything-v4/book_grim.py -img " + file.getPath() + " -p \""+ prompt +"\"");
+        ProcessBuilder pb = new ProcessBuilder("sudo python3.10 ~/ControlNet-with-Anything-v4/book_grim.py -img " + file.getPath() + " -p \""+ prompt +"\"");
+        pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+        pb.redirectError(ProcessBuilder.Redirect.INHERIT);
+        Process controlnet = pb.start();
         try {
             controlnet.waitFor();
+
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
